角色跟随，有问题，还不知道怎么修复

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -5,5 +5,11 @@
       "width": 585,
       "height": 329
     }
-  }
+  },
+  "layer": [
+    {
+      "name": "ctrl",
+      "value": 1
+    }
+  ]
 }
